--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,11 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
+  },
+  "paths": {
+    "@environments/*": ["./src/environments/*"],
+    "@core/*": ["./src/app/core/*"],
+    "@pages/*": ["./src/app/pages/*"],
+    "@shared/*": ["./src/app/shared/*"]
   }
 }
